--- a/app/src/main/res/layout/bottom_sheet_history.xml
+++ b/app/src/main/res/layout/bottom_sheet_history.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="8dp"
+    android:id="@+id/bs_layout"
+    android:background="@drawable/dialog_history_bottom_sheet"
     app:layout_behavior="@string/bottom_sheet_behavior"
-    android:id="@+id/bs_layout">
+    app:behavior_hideable="false"
+    app:behavior_peekHeight="20dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,21 +19,27 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/bs_title"
             android:layout_alignParentRight="true"
-            android:text="확인" />
+            android:text="확인"
+            style="@style/history_dialog_text"
+            android:fontFamily="@font/nexonlv1_bold"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/bs_title"
-            android:text="취소" />
+            android:text="취소"
+            style="@style/history_dialog_text"
+            android:fontFamily="@font/nexonlv1_bold"/>
 
         <TextView
             android:id="@+id/bs_title"
-            style="@style/dailyRecyclerTitleStyle"
+            style="@style/history_dialog_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="히스토리 필터링" />
+            android:text="히스토리 필터링"
+            android:textSize="24sp"
+            android:fontFamily="@font/nexonlv1_light"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,18 +58,22 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4"
-                    android:text="검색" />
+                    android:layout_weight="1"
+                    android:text="검색어"
+                    style="@style/history_dialog_text"
+                    android:textSize="20sp"/>
 
                 <EditText
+                    android:id="@+id/history_keyword"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
-                    android:layout_weight="7"
+                    android:layout_weight="2"
                     android:background="@drawable/bs_search_shape"
                     android:maxLines="1"
                     android:drawableRight="@drawable/ic_baseline_search_24"
                     android:cursorVisible="false"
-                    android:padding="8dp"/>
+                    android:padding="8dp"
+                    android:backgroundTint="@color/colorOnSecondary"/>
 
             </LinearLayout>
 
@@ -71,20 +82,28 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="10"
                 android:orientation="horizontal"
-                android:padding="8dp">
+                android:padding="8dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7"
-                    android:text="날짜로 이동" />
+                    android:layout_weight="1"
+                    android:text="날짜"
+                    style="@style/history_dialog_text"
+                    android:textSize="20sp"/>
 
                 <TextView
-                    android:id="@+id/date_filter"
+                    android:id="@+id/history_date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7"
-                    android:text="2022/10/27" />
+                    android:layout_weight="2"
+                    android:text="2022/10/27"
+                    style="@style/history_dialog_text"
+                    android:textSize="20sp"
+                    android:gravity="center"
+                    android:fontFamily="@font/nexonlv1_bold"/>
 
                 <Button
                     android:id="@+id/history_today"
@@ -97,7 +116,8 @@
                     android:paddingVertical="8dp"
                     android:text="오늘"
                     android:textSize="12dp"
-                    android:textColor="@color/colorOnPrimary" />
+                    android:textColor="@color/colorSecondary"
+                    android:backgroundTint="@color/colorOnPrimary"/>
 
             </LinearLayout>
 
@@ -106,39 +126,24 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="10"
                 android:orientation="horizontal"
-                android:padding="8dp">
+                android:padding="8dp"
+                android:gravity="center_vertical">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:text="카테고리 선택" />
-
-                <Button
-                    android:id="@+id/history_category1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bs_today_selector"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:paddingHorizontal="12dp"
-                    android:paddingVertical="8dp"
+                    android:layout_weight="1"
                     android:text="카테고리"
-                    android:textSize="12dp"
-                    android:textColor="@color/colorOnPrimary" />
+                    style="@style/history_dialog_text"
+                    android:textSize="20sp"/>
 
-                <Button
-                    android:id="@+id/history_category2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bs_today_selector"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:paddingHorizontal="12dp"
-                    android:paddingVertical="8dp"
-                    android:text="카테고리"
-                    android:textSize="12dp"
-                    android:textColor="@color/colorOnPrimary" />
+                <Spinner
+                    android:id="@+id/history_category"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="2"
+                    android:background="@drawable/bs_search_shape"
+                    android:backgroundTint="@color/colorOnSecondary"/>
 
             </LinearLayout>
         </LinearLayout>
