--- a/app/src/main/res/layout/activity_set_history.xml
+++ b/app/src/main/res/layout/activity_set_history.xml
@@ -74,18 +74,11 @@
                 android:text="기존 히스토리 제목"
                 android:textColor="@color/colorOnSecondary"
                 android:textColorHint="@color/colorOnSecondary"
-                android:textCursorDrawable="@color/colorPrimaryVariant" />
-
-            <ImageView
-                android:id="@+id/history_color_picker"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_baseline_circle_24"
-                android:layout_gravity="right"
-                android:layout_marginHorizontal="8dp"/>
+                android:textCursorDrawable="@color/colorPrimaryVariant"
+                android:layout_gravity="center"
+                android:gravity="center"/>
 
         </LinearLayout>
-
 
         <View
             android:layout_width="match_parent"
@@ -104,22 +97,21 @@
             <TextView
                 android:id="@+id/history_date_edit"
                 style="@style/history_dialog_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="10"
                 android:fontFamily="@font/nexonlv1_bold"
                 android:text="2022/11/03"
-                android:textSize="20sp" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:textSize="20sp"
+                android:gravity="center"
+                android:layout_gravity="center"/>
 
             <Button
                 android:id="@+id/history_date_today"
                 style="@style/button_basic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="오늘"
                 android:textSize="16sp" />
 
@@ -132,45 +124,16 @@
             android:layout_marginBottom="12dp"
             android:background="@color/colorPrimaryVariant" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/layout_history_title"
-            android:layout_marginHorizontal="4dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/history_cate1"
-                style="@style/button_basic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:text="카테고리1"
-                android:textSize="16sp" />
-
-            <Button
-                android:id="@+id/history_cate2"
-                style="@style/button_basic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:text="카테고리2"
-                android:textSize="16sp" />
-
-            <Button
-                android:id="@+id/history_add_category"
-                style="@style/button_basic"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="4dp"
+            <Spinner
+                android:id="@+id/history_category"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:background="@drawable/bs_search_shape"
                 android:backgroundTint="@color/colorOnPrimary"
-                android:foreground="@drawable/ic_baseline_add_24"
-                android:foregroundTint="@color/colorPrimaryVariant"
-                android:text=""
-                android:textSize="16sp" />
-
-        </LinearLayout>
+                android:spinnerMode="dialog"
+                android:entries="@array/category_entry"
+                android:textAlignment="center"
+                android:layout_gravity="center"/>
 
         <View
             android:layout_width="match_parent"
