--- a/app/src/main/res/layout/fragment_daliy.xml
+++ b/app/src/main/res/layout/fragment_daliy.xml
@@ -1,65 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/colorOnSecondary"
+    android:paddingTop="20dp">
 
-    <CalendarView
-        android:id="@+id/daily_calendar"
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+        android:id="@+id/daily_calendar_month"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:mcv_arrowColor="@color/colorSecondary"
+        app:mcv_calendarMode="month"
+        app:mcv_selectionColor="@color/colorSecondary"
+        app:mcv_tileHeight="35dp"
+        />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/daily_calendar">
+        android:layout_below="@+id/daily_calendar_month">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/daily_recycler"
-        android:layout_below="@+id/daily_calendar"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:orientation="vertical"
-        android:background="@color/colorOnSecondary"/>
-
-    <RelativeLayout
-        android:id="@+id/add_todo"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_below="@+id/daily_recycler"
-        android:background="@color/colorOnSecondary">
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/add_civ"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_baseline_add_24"
-                app:civ_border_color="@color/colorPrimary"
-                app:civ_circle_background_color="@color/colorSecondary"/>
-
-            <TextView
-                android:layout_width="wrap_content"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/daily_recycler"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="한 일/할 일 추가"
-                android:layout_toRightOf="@+id/add_civ"
-                android:layout_centerVertical="true"
-                android:textSize="20sp"
-                android:layout_marginHorizontal="8dp"/>
-        </RelativeLayout>
+                android:layout_below="@+id/daily_calendar"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
-    </RelativeLayout>
-    </LinearLayout>
+            <RelativeLayout
+                android:id="@+id/add_todo"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_below="@+id/daily_recycler"
+                android:background="@color/colorOnSecondary">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/add_civ"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_baseline_add_24"
+                        app:civ_border_color="@color/colorPrimary"
+                        app:civ_circle_background_color="@color/colorSecondary" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginHorizontal="8dp"
+                        android:layout_toRightOf="@+id/add_civ"
+                        android:text="한 일/할 일 추가"
+                        android:textSize="20sp" />
+                </RelativeLayout>
+
+            </RelativeLayout>
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
+
 </RelativeLayout>
