--- a/app/src/main/res/layout/goallist_recycler_item.xml
+++ b/app/src/main/res/layout/goallist_recycler_item.xml
@@ -70,6 +70,7 @@
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/goallist_detail_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/goallist"
