--- a/app/src/main/res/layout/history_recycler_item.xml
+++ b/app/src/main/res/layout/history_recycler_item.xml
@@ -16,14 +16,14 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/history_recycler_datas_left"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:reverseLayout="true"
             app:stackFromEnd="true"
-            android:layout_gravity="right"/>
+            android:layout_gravity="right" />
 
         <View
             android:layout_width="match_parent"
@@ -54,7 +54,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/history_recycler_datas_right"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp"
