--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,8 @@
         <item name="android:textSize">20dp</item>
         <item name="android:textColor">@color/colorPrimary</item>
     </style>
+    <style name="MyDialogActivity" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+    </style>
 </resources>
