--- a/app/src/main/res/layout/fragment_set_goal_2.xml
+++ b/app/src/main/res/layout/fragment_set_goal_2.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@null">
 
     <ImageView
@@ -16,21 +16,21 @@
 
     <TextView
         android:id="@+id/add_detail_goal_page"
+        style="@style/history_dialog_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="소목표 추가"
-        style="@style/history_dialog_text"
-        android:textSize="12sp"
-        android:drawableTop="@drawable/ic_baseline_add_24"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"/>
-    
+        android:drawableTop="@drawable/ic_baseline_add_24"
+        android:text="소목표 추가"
+        android:textSize="12sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="24dp">
+        android:layout_marginTop="24dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="200dp"
@@ -127,98 +127,95 @@
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginVertical="12dp"
-            android:text="달성 방법"
-            android:textColor="@color/colorOnSecondary" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginVertical="12dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/goal_task_name"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="4dp"
-                android:background="@drawable/bs_search_shape"
-                android:backgroundTint="@color/colorOnSecondary"
-                android:gravity="center_horizontal"
-                android:hint="재료명"
-                android:maxLines="1"
-                android:textColor="@color/colorPrimary"
-                android:textColorHint="@color/colorPrimary"
-                android:textCursorDrawable="@color/colorPrimaryVariant" />
+            android:paddingHorizontal="20dp">
 
             <TextView
-                style="@style/history_dialog_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 android:layout_gravity="center"
-                android:layout_marginRight="12dp"
-                android:text="이"
-                android:textSize="24sp" />
+                android:layout_marginVertical="12dp"
+                android:text="달성 방법"
+                android:textColor="@color/colorOnSecondary" />
 
-            <EditText
-                android:id="@+id/goal_task_total"
+            <com.github.angads25.toggle.widget.LabeledSwitch
+                android:id="@+id/and_or_toggle"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="4dp"
-                android:background="@drawable/bs_search_shape"
-                android:backgroundTint="@color/colorOnSecondary"
-                android:gravity="center_horizontal"
-                android:hint="필요개수"
-                android:inputType="number"
-                android:maxLines="1"
-                android:textColor="@color/colorPrimary"
-                android:textColorHint="@color/colorPrimary"
-                android:textCursorDrawable="@color/colorPrimaryVariant" />
-
-            <TextView
-                style="@style/history_dialog_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:layout_gravity="center"
-                android:text="개"
-                android:textSize="24sp" />
+                app:colorBorder="@color/colorOnSecondary"
+                app:colorOff="@color/colorOnSecondary"
+                app:colorOn="@color/colorSecondary"
+                app:textOff="또는"
+                app:textOn="그리고" />
+        </RelativeLayout>
+        <!--        <LinearLayout-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_gravity="center"-->
+        <!--            android:layout_marginVertical="12dp"-->
+        <!--            android:gravity="center"-->
+        <!--            android:orientation="horizontal">-->
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_baseline_add_circle_outline_24" />
+        <!--            <EditText-->
+        <!--                android:id="@+id/goal_task_name"-->
+        <!--                android:layout_width="150dp"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_marginHorizontal="4dp"-->
+        <!--                android:background="@drawable/bs_search_shape"-->
+        <!--                android:backgroundTint="@color/colorOnSecondary"-->
+        <!--                android:gravity="center_horizontal"-->
+        <!--                android:hint="재료명"-->
+        <!--                android:maxLines="1"-->
+        <!--                android:textColor="@color/colorPrimary"-->
+        <!--                android:textColorHint="@color/colorPrimary"-->
+        <!--                android:textCursorDrawable="@color/colorPrimaryVariant" />-->
 
-        </LinearLayout>
-        
+        <!--            <TextView-->
+        <!--                style="@style/history_dialog_text"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:layout_marginRight="12dp"-->
+        <!--                android:text="이"-->
+        <!--                android:textSize="24sp" />-->
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal">
+        <!--            <EditText-->
+        <!--                android:id="@+id/goal_task_total"-->
+        <!--                android:layout_width="100dp"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_marginHorizontal="4dp"-->
+        <!--                android:background="@drawable/bs_search_shape"-->
+        <!--                android:backgroundTint="@color/colorOnSecondary"-->
+        <!--                android:gravity="center_horizontal"-->
+        <!--                android:hint="필요개수"-->
+        <!--                android:inputType="number"-->
+        <!--                android:maxLines="1"-->
+        <!--                android:textColor="@color/colorPrimary"-->
+        <!--                android:textColorHint="@color/colorPrimary"-->
+        <!--                android:textCursorDrawable="@color/colorPrimaryVariant" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="그리고"
-                style="@style/history_dialog_text"
-                android:textSize="20sp"/>
+        <!--            <TextView-->
+        <!--                style="@style/history_dialog_text"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:text="개"-->
+        <!--                android:textSize="24sp" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="또는"
-                style="@style/history_dialog_text"
-                android:textSize="20sp"/>
+        <!--            <ImageView-->
+        <!--                android:layout_width="30dp"-->
+        <!--                android:layout_height="30dp"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:src="@drawable/ic_baseline_add_circle_outline_24" />-->
 
-        </LinearLayout>
+        <!--        </LinearLayout>-->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/task_recycler"
