--- a/app/src/main/res/layout/history_recycler_item.xml
+++ b/app/src/main/res/layout/history_recycler_item.xml
@@ -26,6 +26,7 @@
             android:layout_gravity="right" />
 
         <View
+            android:id="@+id/line_left"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginLeft="12dp"
@@ -63,6 +64,7 @@
             app:stackFromEnd="true"/>
 
         <View
+            android:id="@+id/line_right"
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginTop="4dp"
