--- a/app/src/main/res/layout/activity_set_goal.xml
+++ b/app/src/main/res/layout/activity_set_goal.xml
@@ -18,7 +18,7 @@
         android:layout_marginBottom="40dp">
 
         <Button
-            android:id="@+id/history_done"
+            android:id="@+id/goal_done"
             style="@style/button_basic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:id="@+id/history_cancel"
+            android:id="@+id/goal_cancel"
             style="@style/button_basic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
