--- a/app/src/main/res/layout/fragment_set_goal_2.xml
+++ b/app/src/main/res/layout/fragment_set_goal_2.xml
@@ -155,72 +155,11 @@
                 app:textOff="또는"
                 app:textOn="그리고" />
         </RelativeLayout>
-        <!--        <LinearLayout-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_gravity="center"-->
-        <!--            android:layout_marginVertical="12dp"-->
-        <!--            android:gravity="center"-->
-        <!--            android:orientation="horizontal">-->
-
-        <!--            <EditText-->
-        <!--                android:id="@+id/goal_task_name"-->
-        <!--                android:layout_width="150dp"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_marginHorizontal="4dp"-->
-        <!--                android:background="@drawable/bs_search_shape"-->
-        <!--                android:backgroundTint="@color/colorOnSecondary"-->
-        <!--                android:gravity="center_horizontal"-->
-        <!--                android:hint="재료명"-->
-        <!--                android:maxLines="1"-->
-        <!--                android:textColor="@color/colorPrimary"-->
-        <!--                android:textColorHint="@color/colorPrimary"-->
-        <!--                android:textCursorDrawable="@color/colorPrimaryVariant" />-->
-
-        <!--            <TextView-->
-        <!--                style="@style/history_dialog_text"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:layout_marginRight="12dp"-->
-        <!--                android:text="이"-->
-        <!--                android:textSize="24sp" />-->
-
-        <!--            <EditText-->
-        <!--                android:id="@+id/goal_task_total"-->
-        <!--                android:layout_width="100dp"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_marginHorizontal="4dp"-->
-        <!--                android:background="@drawable/bs_search_shape"-->
-        <!--                android:backgroundTint="@color/colorOnSecondary"-->
-        <!--                android:gravity="center_horizontal"-->
-        <!--                android:hint="필요개수"-->
-        <!--                android:inputType="number"-->
-        <!--                android:maxLines="1"-->
-        <!--                android:textColor="@color/colorPrimary"-->
-        <!--                android:textColorHint="@color/colorPrimary"-->
-        <!--                android:textCursorDrawable="@color/colorPrimaryVariant" />-->
-
-        <!--            <TextView-->
-        <!--                style="@style/history_dialog_text"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:text="개"-->
-        <!--                android:textSize="24sp" />-->
-
-        <!--            <ImageView-->
-        <!--                android:layout_width="30dp"-->
-        <!--                android:layout_height="30dp"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:src="@drawable/ic_baseline_add_circle_outline_24" />-->
-
-        <!--        </LinearLayout>-->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/task_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
@@ -233,7 +172,38 @@
             android:text="모으면 완성"
             android:textSize="24sp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginHorizontal="60dp"
+            android:orientation="horizontal"
+            android:layout_marginBottom="40dp">
+
+            <Button
+                android:id="@+id/goal_done"
+                style="@style/button_basic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="완료" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/goal_cancel"
+                style="@style/button_basic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="취소" />
+
+        </LinearLayout>
+
     </LinearLayout>
+
 
 
 </RelativeLayout>
