--- a/app/src/main/res/layout/fragment_set_goal_1.xml
+++ b/app/src/main/res/layout/fragment_set_goal_1.xml
@@ -161,35 +161,35 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginHorizontal="60dp"
-        android:orientation="horizontal"
-        android:layout_marginBottom="40dp">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginHorizontal="60dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:layout_marginBottom="40dp">-->
 
-        <Button
-            android:id="@+id/goal_done"
-            style="@style/button_basic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="완료" />
+<!--        <Button-->
+<!--            android:id="@+id/goal_done"-->
+<!--            style="@style/button_basic"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="완료" />-->
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+<!--        <View-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_weight="1" />-->
 
-        <Button
-            android:id="@+id/goal_cancel"
-            style="@style/button_basic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="취소" />
+<!--        <Button-->
+<!--            android:id="@+id/goal_cancel"-->
+<!--            style="@style/button_basic"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="right"-->
+<!--            android:text="취소" />-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
 
 </RelativeLayout>
