--- a/app/src/main/res/layout/goallist_inner_recycler_item.xml
+++ b/app/src/main/res/layout/goallist_inner_recycler_item.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ezralee.bdotodo.viewmodel.GoalDataModel" />
+        <variable
+            name="fragmentNumber"
+            type="String" />
+    </data>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,7 +17,7 @@
         android:id="@+id/goallist_inner_recycler_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="소목표"
+        android:text="@{viewModel.}"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ellipsize="end"
@@ -22,3 +31,4 @@
         android:layout_below="@+id/goallist_inner_recycler_item_title"/>
 
 </RelativeLayout>
+</layout>
