--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorOnSecondary">
 
     <View
@@ -23,7 +24,8 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
         app:reverseLayout="true"
-        app:stackFromEnd="true"/>
+        app:stackFromEnd="true"
+        tools:listitem="@layout/history_recycler_item"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
