--- a/app/src/main/res/layout/goallist_inner_inner_recycler_item.xml
+++ b/app/src/main/res/layout/goallist_inner_inner_recycler_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="4dp">
 
     <TextView
         android:id="@+id/goallist_inner_inner_task"
