--- a/app/src/main/res/layout/goallist_inner_recycler_item.xml
+++ b/app/src/main/res/layout/goallist_inner_recycler_item.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <variable
-            name="viewModel"
-            type="com.ezralee.bdotodo.viewmodel.GoalDataModel" />
+
         <variable
             name="fragmentNumber"
             type="String" />
@@ -17,7 +15,7 @@
         android:id="@+id/goallist_inner_recycler_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{viewModel.}"
+        android:text="소목표"
         android:layout_centerHorizontal="true"
         android:maxLines="1"
         android:ellipsize="end"
@@ -28,7 +26,8 @@
         android:id="@+id/goallist_inner_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/goallist_inner_recycler_item_title"/>
+        android:layout_below="@+id/goallist_inner_recycler_item_title"
+        tools:listitem="@layout/goallist_inner_inner_recycler_item"/>
 
 </RelativeLayout>
 </layout>
