--- a/app/src/main/res/layout/goallist_recycler_item.xml
+++ b/app/src/main/res/layout/goallist_recycler_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:id="@+id/goallist"
@@ -75,6 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/goallist"
         android:paddingVertical="8dp"
-        android:paddingHorizontal="16dp"/>
+        android:paddingHorizontal="16dp"
+        tools:listitem="@layout/goallist_inner_recycler_item"/>
 
 </RelativeLayout>
