--- a/app/src/main/res/layout/history_recycler_item.xml
+++ b/app/src/main/res/layout/history_recycler_item.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="historyData"
+            type="com.ezralee.bdotodo.viewmodel.HistoryData" />
+    </data>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_weight="2"
     android:orientation="horizontal">
 
@@ -23,7 +30,8 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:reverseLayout="true"
             app:stackFromEnd="true"
-            android:layout_gravity="right" />
+            android:layout_gravity="right"
+            tools:listitem="@layout/history_inner_recycler_item"/>
 
         <View
             android:id="@+id/line_left"
@@ -40,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
             android:layout_marginRight="8dp"
-            android:text="2022/10/28"
+            android:text="@{historyData.date}"
             android:textAlignment="viewEnd"
             android:textSize="20sp" />
     </LinearLayout>
@@ -61,7 +69,8 @@
             android:padding="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:reverseLayout="true"
-            app:stackFromEnd="true"/>
+            app:stackFromEnd="true"
+            tools:listitem="@layout/history_inner_recycler_item"/>
 
         <View
             android:id="@+id/line_right"
@@ -78,8 +87,9 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="8dp"
             android:layout_marginLeft="8dp"
-            android:text="2022/10/28"
+            android:text="@{historyData.date}"
             android:textSize="20sp" />
 
     </LinearLayout>
 </LinearLayout>
+</layout>
