--- a/app/src/main/res/layout/history_inner_recycler_item.xml
+++ b/app/src/main/res/layout/history_inner_recycler_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="historyData"
             type="com.ezralee.bdotodo.viewmodel.HistoryData" />
     </data>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="6dp">
